--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@
     background: #EEEEEE;
     border: 1px solid #CCCCCC;
 }
-body, html, #map {
+body, html, #map, #wrapper {
     height: 100%;
 }
 body {
@@ -72,7 +72,6 @@ textarea {
 }
 #wrapper {
 	margin: auto;
-	width: 500px;
 }
 .box {
 	-webkit-box-sizing: border-box;
@@ -80,12 +79,12 @@ textarea {
 	box-sizing: border-box;
 }
 
-/* Map */
+/* Map *//*
 
 #map {
 	height: 500px;
 	width: 500px;
-}
+}*/
 
 /* Button */
 
