--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,15 +86,20 @@ textarea {
 	box-sizing: border-box;
 }
 
-/* Map *//*
-
-#map {
-	height: 500px;
-	width: 500px;
-}*/
+/* Map */
 
 .leaflet-popup-content {
 	overflow: auto;
+}
+
+/* Mobile Ovverides */
+.ipad body,
+.iphone body {
+	margin-bottom: 70px;
+}
+.ipad .leaflet-container a.leaflet-popup-close-button,
+.iphone .leaflet-container a.leaflet-popup-close-button {
+	font-size: 20px;
 }
 
 /* Button */
