--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -6,8 +6,12 @@
 body {
 	margin: 0 10px !important; /* Pad for transitions */
 }
-body, #wrapper {
+body, section, #wrapper {
+	font-size: 16px !important;
 	width: auto;
+}
+section {
+	font-size: 16px !important;
 }
 
 #responder_form {
